# embeded

./: CMakeLists.txt  Makefile  main.cpp  main_official.cpp  main_pre.cpp  opencv.cpp  opencv_rev_origin.cpp  protocol.h  serial.c  serial.cpp
